# agentic-migration

./: .gitignore  CONTRIBUTING.md  README.md  business-request.md  provider_topology_and_qa_strategy.md  pyproject.toml
.agent/spec_templates/: business_question_profile.template.yaml  databricks_deployment_profile.template.yaml  model_iteration_packet.template.yaml  normalization_probe.template.yaml  provider_entity_profile.template.yaml  semantic_discovery_issue.template.yaml  silver_entity_model.template.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: hitl-decision.yml  task.yml
.github/workflows/: agentops-ci.yml
dbt/: dbt_project.yml  profiles.yml  selectors.yml
dbt/macros/: active_batch.sql  data_quality_standardization.sql  (+2 more)
docs/: 01_2_business_question_profiling_plan.md  01_provider_discovery_and_specs_plan.md  02_canonical_model_and_contracts_plan.md  03_adapter_implementation_and_ci_plan.md  04_5_local_data_workbench_and_model_evolution_plan.md  04_databricks_validation_and_rollout_plan.md  04_local_runtime_and_contract_certification_plan.md  05_databricks_validation_and_rollout_plan.md  05_dbt_model_layering_and_normal_form_evolution_plan.md  aegis_provider_tests_reference.md  agentic_rollout.md  agentops_filesystem_conventions.md  agentops_skill_strategy.md  bluestone_provider_tests_reference.md  dbt_rollout.md  healthcare_source_standards_reference.md  local_postgres_workbench_deploy.md  local_runtime_macos_requirements.md  technical_prd_agentops_operating_spec.md
logs/: README.md
metadata/: README.md
reports/: README.md
scripts/: local_provision_postgres.sh  local_reset_postgres.sh
src/: README.md
tests/: test_repository_governance.py
(+455 files in other folders)
